# wcmbot

./: .env.example  .gitattributes  .gitignore  FEATURES.md  README.md  app.py  bench_matcher.py  conftest.py  create_sample_images.py  evaluate_alignment.py  manage.py  matcher.py  pyproject.toml  pytest.ini  requirements.txt  requirements_old.txt  setup.sh  test_gradio.py  test_matcher_functional.py  tests_e2e.py  version.py
.github/workflows/: hfsync.yml  test.yml
jigsaw_project/: asgi.py  settings.py  urls.py  wsgi.py
puzzle/: admin.py  matcher.py  models.py  tests.py  urls.py  views.py
puzzle/migrations/: 0001_initial.py
puzzle/templates/puzzle/: base.html  detail.html  index.html
tests/: test_gradio.py  test_matcher_functional.py
wcmbot/: _version.py  bench_matcher.py
